force-app/main/default/objects/Lead__c/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <label>Aadhar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>