force-app/main/default/objects/Lead__c/fields/Alternative_Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact_Person_Name__c</fullName>
    <label>Alternate Contact Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>