force-app/main/default/objects/Lead__c/fields/Approval_Status1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status1__c</fullName>
    <formula>Text(Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>