force-app/main/default/objects/Lead__c/fields/Competitor_Brands__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Brands__c</fullName>
    <label>Competitor Brands</label>
    <type>TextArea</type>
</CustomField>