force-app/main/default/objects/Lead__c/fields/Edit_Access_on_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access_on_Submit_for_Approval__c</fullName>
    <formula>IF( Owner:User.Id =  $User.Id , &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Access on Submit for Approval</label>
    <type>Text</type>
</CustomField>