force-app/main/default/objects/Lead__c/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <label>Followup Date</label>
    <type>Date</type>
</CustomField>