force-app/main/default/objects/Lead__c/fields/Freezer_shared__c.field-meta.xml
<CustomField>
    <fullName>Freezer_shared__c</fullName>
    <label>Freezer shared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>