force-app/main/default/objects/Lead__c/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <formula>Text(GeoLocation_lead_checkin__Latitude__s)+&apos;,&apos;+Text(GeoLocation_lead_checkin__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GeoLocation</label>
    <type>Text</type>
</CustomField>