force-app/main/default/objects/Lead__c/fields/GeoLocation_lead_checkin__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation_lead_checkin__c</fullName>
    <label>GeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>