force-app/main/default/objects/Lead__c/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Juice Parlour</fullName>
            </value>
            <value>
                <fullName>Super Market</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
            <value>
                <fullName>Ice-Cream Parlour</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>