force-app/main/default/objects/Lead__c/fields/Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Classification__c</fullName>
    <label>Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>