force-app/main/default/objects/Lead__c/fields/Lead_Preference__c.field-meta.xml
<CustomField>
    <fullName>Lead_Preference__c</fullName>
    <label>Lead Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Preference</valueSetName>
    </valueSet>
</CustomField>