force-app/main/default/objects/Lead__c/fields/Lead_Status1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status1__c</fullName>
    <formula>TEXT(Lead_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>