force-app/main/default/objects/Lead__c/fields/leadCheckin_latitude__c.field-meta.xml
<CustomField>
    <fullName>leadCheckin_latitude__c</fullName>
    <label>leadCheckin latitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>