force-app/main/default/objects/Lead__c/fields/leadCheckin_longitude__c.field-meta.xml
<CustomField>
    <fullName>leadCheckin_longitude__c</fullName>
    <label>leadCheckin longitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>