force-app/main/default/objects/Lead__c/fields/Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reasons__c</fullName>
    <label>Lost Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Budget issue</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Random enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>