force-app/main/default/objects/Lead__c/fields/Lost_to_competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_competitor_Name__c</fullName>
    <label>Lost to Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>