force-app/main/default/objects/Lead__c/fields/Other_Brands__c.field-meta.xml
<CustomField>
    <fullName>Other_Brands__c</fullName>
    <label>Competitor Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TATA</fullName>
            </value>
            <value>
                <fullName>Tech Mahindra</fullName>
            </value>
            <value>
                <fullName>Adani Group</fullName>
            </value>
            <value>
                <fullName>Reliance Industries</fullName>
            </value>
            <value>
                <fullName>Baskin robins</fullName>
                <isActive>false</isActive>
                <label>Baskin robins</label>
            </value>
            <value>
                <fullName>Kwality walls</fullName>
                <isActive>false</isActive>
                <label>Kwality walls</label>
            </value>
            <value>
                <fullName>Lazza</fullName>
                <isActive>false</isActive>
                <label>Lazza</label>
            </value>
            <value>
                <fullName>Mercelys</fullName>
                <isActive>false</isActive>
                <label>Mercelys</label>
            </value>
            <value>
                <fullName>Skei</fullName>
                <isActive>false</isActive>
                <label>Skei</label>
            </value>
            <value>
                <fullName>cream bell</fullName>
                <isActive>false</isActive>
                <label>cream bell</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>