force-app/main/default/objects/Lead__c/fields/Other_reason__c.field-meta.xml
<CustomField>
    <fullName>Other_reason__c</fullName>
    <label>Other reason</label>
    <type>TextArea</type>
</CustomField>