force-app/main/default/objects/Lead__c/fields/Other_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Source__c</fullName>
    <label>Other Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>