force-app/main/default/objects/Lead__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <label>Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Group</valueSetName>
    </valueSet>
</CustomField>