force-app/main/default/objects/Lead__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Lead Description</label>
    <type>TextArea</type>
</CustomField>