force-app/main/default/objects/Lead__c/fields/RSM_Manger__c.field-meta.xml
<CustomField>
    <fullName>RSM_Manger__c</fullName>
    <formula>IF (Owner:User.Profile.Name == &apos;Area Sales Manager&apos;,  Owner:User.ManagerId , Owner:User.Manager.ManagerId  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Manger</label>
    <type>Text</type>
</CustomField>