force-app/main/default/objects/Lead__c/fields/Salutation_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Alternative__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>