force-app/main/default/objects/Lead__c/fields/Shop_Category__c.field-meta.xml
<CustomField>
    <fullName>Shop_Category__c</fullName>
    <label>Shop Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-Class</fullName>
            </value>
            <value>
                <fullName>B-Class</fullName>
            </value>
            <value>
                <fullName>C-Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>