force-app/main/default/objects/Lead__c/validationRules/Alternative_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternative_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(AND(LEN(  Alternative_Phone_Number__c ) = 10,ISNUMBER(Alternative_Phone_Number__c )) || LEN(Alternative_Phone_Number__c ) = 0)</errorConditionFormula>
    <errorDisplayField>Alternative_Phone_Number__c</errorDisplayField>
    <errorMessage>Please Enter Valid Phone Number</errorMessage>
</ValidationRule>