force-app/main/default/objects/Lead__c/validationRules/Distributor_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Text(Lead_Type__c) =&apos;Dealer&apos; ,ISBLANK( Distributor__c ))</errorConditionFormula>
    <errorDisplayField>Distributor__c</errorDisplayField>
    <errorMessage>Please Select Distributor</errorMessage>
</ValidationRule>