force-app/main/default/objects/Lead__c/validationRules/GST_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(  GST_Number__c )) &amp;&amp; LEN( GST_Number__c ) &lt;&gt; 15</errorConditionFormula>
    <errorDisplayField>GST_Number__c</errorDisplayField>
    <errorMessage>Please Enter 15 digit correct GST number</errorMessage>
</ValidationRule>