force-app/main/default/objects/Lead__c/validationRules/Mobile_Number_10_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_10_Digit</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(AND(LEN( Contact_Number__c ) = 10,ISNUMBER(Contact_Number__c )) || LEN(Contact_Number__c ) = 0)</errorConditionFormula>
    <errorDisplayField>Contact_Number__c</errorDisplayField>
    <errorMessage>Please Enter Valid Mobile Number</errorMessage>
</ValidationRule>