force-app/main/default/objects/Lead__c/validationRules/Pan_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( PAN__c )) &amp;&amp; LEN( PAN__c ) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>Please enter valid PAN number</errorMessage>
</ValidationRule>