force-app/main/default/objects/Lead__c/validationRules/PIN_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PIN_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    NOT(ISNUMBER(Pincode__c)),
    LEN(Pincode__c) &lt;&gt; 6  
) &amp;&amp; NOT(ISBLANK(Pincode__c))</errorConditionFormula>
    <errorDisplayField>Pincode__c</errorDisplayField>
    <errorMessage>Please Enter Valid Pin Code</errorMessage>
</ValidationRule>